---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 137
expression: content
---
## `ci.js`

```js
if

```

# Emitted Messages

```block
error[SyntaxError]: expected `(` but instead the file ends
  ┌─ ci.js:2:1
  │
2 │ 
  │ ^ the file ends here


```


